load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@rules_multirun//:defs.bzl", "command", "multirun")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//bazel:api.bzl", "modular_py_binary", "modular_py_library", "mojo_binary", "requirement")
load(":linter.bzl", "linter")

package(default_visibility = ["//visibility:public"])

_BUILDIFIER_IGNORES = [
    "./.derived/*",
    "./.git/*",
    "./CloudInfra/go/pkg/*",
    "./third-party/llvm-project/*",
    "./oss/max-llm-book/.pixi/*",
    "./oss/skills/port-an-llm-to-max/.pixi/*",
]

modular_py_library(
    name = "lint_helpers",
    srcs = ["lint_helpers.py"],
    imports = ["."],
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = _BUILDIFIER_IGNORES,
    lint_mode = "warn",
    mode = "diff",
)

buildifier(
    name = "buildifier.fix",
    exclude_patterns = _BUILDIFIER_IGNORES,
    lint_mode = "fix",
    mode = "fix",
)

modular_py_binary(
    name = "ruff_wrapper",
    srcs = ["ruff_wrapper.py"],
    data = select({
        "//:linux_x86_64": ["@ruff-x86_64-unknown-linux-gnu//:ruff"],
        "//:linux_aarch64": ["@ruff-aarch64-unknown-linux-gnu//:ruff"],
        "@platforms//os:macos": ["@ruff-aarch64-apple-darwin//:ruff"],
    }),
    deps = [":lint_helpers"],
)

linter(
    base_name = "ruff",
    binary = ":ruff_wrapper",
)

alias(
    name = "rumdl",
    actual = select({
        "//:linux_x86_64": "@rumdl-x86_64-unknown-linux-musl//:rumdl",
        "//:linux_aarch64": "@rumdl-aarch64-unknown-linux-musl//:rumdl",
        "@platforms//os:macos": "@rumdl-aarch64-apple-darwin//:rumdl",
    }),
    tags = ["maybe-unused"],  # TODO: Remove when used
)

command(
    name = "rumdl.check",
    arguments = [
        "check",
        ".",
        "--config",
        "$(location :.rumdl.toml)",
    ],
    command = ":rumdl",
    data = [":.rumdl.toml"],
    run_from_workspace_root = True,
)

command(
    name = "rumdl.fix",
    arguments = [
        "fmt",
        ".",
        "--config",
        "$(location :.rumdl.toml)",
    ],
    command = ":rumdl",
    data = [":.rumdl.toml"],
    run_from_workspace_root = True,
)

modular_py_binary(
    name = "mblack-wrapper",
    srcs = ["mblack-wrapper.py"],
    tags = ["no-pydeps"],  # TODO: Fix and re-enable
    deps = [
        ":lint_helpers",
        "@mblack",
    ],
)

linter(
    base_name = "mblack",
    binary = ":mblack-wrapper",
)

# No fix or fast mode
modular_py_binary(
    name = "lint_docstrings",
    srcs = ["lint_docstrings.py"],
    deps = [":lint_helpers"],
)

# No fix or fast mode
modular_py_binary(
    name = "action-versions-pinned",
    srcs = ["action-versions-pinned.py"],
    deps = [requirement("pyyaml")],
)

mojo_binary(
    name = "check_licenses",
    srcs = [":check_licenses.mojo"],
    deps = ["@mojo//:std"],
)

command(
    name = "check_licenses.check",
    command = ":check_licenses",
    run_from_workspace_root = True,
)

command(
    name = "check_licenses.fix",
    arguments = ["--fix"],
    command = ":check_licenses",
    run_from_workspace_root = True,
)

modular_py_binary(
    name = "shellcheck_wrapper",
    srcs = ["shellcheck_wrapper.py"],
    data = select({
        "//:linux_x86_64": ["@shellcheck-linux.x86_64//:shellcheck"],
        "//:linux_aarch64": ["@shellcheck-linux.aarch64//:shellcheck"],
        "@platforms//os:macos": ["@shellcheck-darwin.aarch64//:shellcheck"],
    }),
    deps = [":lint_helpers"],
)

linter(
    base_name = "shellcheck",
    binary = ":shellcheck_wrapper",
    has_fix = False,
)

multirun(
    name = "lint",
    buffer_output = True,
    commands = [
        ":action-versions-pinned",
        ":buildifier.check",
        ":check_licenses.check",
        ":mblack.check",
        ":ruff.check",
        ":rumdl.check",
        ":shellcheck.check",
    ],
    jobs = 0,
)

COMMON_FIX_COMMANDS = [
    ":buildifier.fix",
    ":check_licenses.fix",
    ":rumdl.fix",
]

multirun(
    name = "fix-fast",
    buffer_output = True,
    commands = COMMON_FIX_COMMANDS + [
        ":mblack.fix-fast",
        ":ruff.fix-fast",
    ],
    jobs = 0,
)

multirun(
    name = "fix",
    buffer_output = True,
    commands = COMMON_FIX_COMMANDS + [
        ":mblack.fix",
        ":ruff.fix",
    ],
    jobs = 0,
)

sh_binary(
    name = "format",
    srcs = ["format-wrapper.sh"],
    data = ["//bazel/lint:fix"],
)

sh_binary(
    name = "format-fast",
    srcs = ["format-fast-wrapper.sh"],
    data = ["//bazel/lint:fix-fast"],
)
