load("@rules_multirun//:defs.bzl", "multirun")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//bazel:api.bzl", "modular_py_binary", "modular_py_library", "mojo_binary", "requirement")
load(":linter.bzl", "linter")

package(default_visibility = ["//visibility:public"])

modular_py_library(
    name = "lint_helpers",
    srcs = ["lint_helpers.py"],
    imports = ["."],
)

modular_py_binary(
    name = "buildifier_wrapper",
    srcs = ["buildifier_wrapper.py"],
    data = ["@buildifier_prebuilt//:buildifier"],
    deps = [":lint_helpers"],
)

linter(
    base_name = "buildifier",
    binary = ":buildifier_wrapper",
)

modular_py_binary(
    name = "ruff_wrapper",
    srcs = ["ruff_wrapper.py"],
    data = select({
        "//:linux_x86_64": ["@ruff-x86_64-unknown-linux-gnu//:ruff"],
        "//:linux_aarch64": ["@ruff-aarch64-unknown-linux-gnu//:ruff"],
        "@platforms//os:macos": ["@ruff-aarch64-apple-darwin//:ruff"],
    }),
    deps = [":lint_helpers"],
)

linter(
    base_name = "ruff",
    binary = ":ruff_wrapper",
)

modular_py_binary(
    name = "rumdl_wrapper",
    srcs = ["rumdl_wrapper.py"],
    data = select({
        "//:linux_x86_64": ["@rumdl-x86_64-unknown-linux-musl//:rumdl"],
        "//:linux_aarch64": ["@rumdl-aarch64-unknown-linux-musl//:rumdl"],
        "@platforms//os:macos": ["@rumdl-aarch64-apple-darwin//:rumdl"],
    }),
    deps = [":lint_helpers"],
)

linter(
    base_name = "rumdl",
    binary = ":rumdl_wrapper",
)

modular_py_binary(
    name = "mblack-wrapper",
    srcs = ["mblack-wrapper.py"],
    tags = ["no-pydeps"],  # TODO: Fix and re-enable
    deps = [
        ":lint_helpers",
        "@mblack",
    ],
)

linter(
    base_name = "mblack",
    binary = ":mblack-wrapper",
)

# No fix or fast mode
modular_py_binary(
    name = "lint_docstrings",
    srcs = ["lint_docstrings.py"],
    deps = [":lint_helpers"],
)

linter(
    base_name = "lint_docstrings",
    binary = ":lint_docstrings",
    has_fix = False,
)

# No fix or fast mode
modular_py_binary(
    name = "action-versions-pinned",
    srcs = ["action-versions-pinned.py"],
    deps = [requirement("pyyaml")],
)

mojo_binary(
    name = "check_licenses",
    srcs = [":check_licenses.mojo"],
    deps = [
        ":lint_helpers",
        "@mojo//:std",
    ],
)

linter(
    base_name = "check_licenses",
    binary = ":check_licenses",
    has_fast = False,
)

modular_py_binary(
    name = "shellcheck_wrapper",
    srcs = ["shellcheck_wrapper.py"],
    data = select({
        "//:linux_x86_64": ["@shellcheck-linux.x86_64//:shellcheck"],
        "//:linux_aarch64": ["@shellcheck-linux.aarch64//:shellcheck"],
        "@platforms//os:macos": ["@shellcheck-darwin.aarch64//:shellcheck"],
    }),
    deps = [":lint_helpers"],
)

linter(
    base_name = "shellcheck",
    binary = ":shellcheck_wrapper",
    has_fix = False,
)

multirun(
    name = "multirun",
    buffer_output = True,
    commands = [
        ":action-versions-pinned",
        ":buildifier_wrapper",
        ":check_licenses",
        ":lint_docstrings",
        ":mblack-wrapper",
        ":ruff_wrapper",
        ":rumdl_wrapper",
        ":shellcheck_wrapper",
    ],
    jobs = 0,
)

[
    sh_binary(
        name = ("lint" if check else "format") + ("-fast" if fast else ""),
        srcs = ["linter_wrapper.sh"],
        data = ["//bazel/lint:multirun"],
        env = {
            "CHECK": str(check),
            "FAST": str(fast),
        },
    )
    for check in (True, False)
    for fast in (True, False)
]
