load("//bazel:api.bzl", "modular_py_binary", "modular_run_binary_test", "requirement")

modular_py_binary(
    name = "addition",
    srcs = ["addition.py"],
    imports = ["."],
    deps = [
        "//max/python/max/graph",
        "//max/python/max/engine",
        # FIXME: Hack, not used directly. Nightly tests fail without this dep.
        "@mojo//:python",
        requirement("numpy"),
    ],
)

modular_run_binary_test(
    name = "addition_test",
    binary = "addition",
)
