load("//bazel:api.bzl", "modular_py_binary", "modular_run_binary_test", "requirement")

package(default_visibility = ["//visibility:private"])

modular_py_binary(
    name = "basic",
    srcs = ["basic.py"],
    imports = ["."],
    deps = [
        "//max/python/max/entrypoints",
        "//max/python/max/entrypoints:pipelines",
        requirement("tqdm"),
    ],
)

modular_run_binary_test(
    name = "basic_test",
    timeout = "long",
    binary = "basic",
    external_noop = True,
    tags = ["requires-network"],
    target_compatible_with = select({
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),  # FIXME long running on MacOS. MOCO-2412
)
