load("@rules_multirun//:defs.bzl", "multirun")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//bazel:api.bzl", "install_docs", "modular_py_binary", "pkg_filegroup", "pkg_files", "strip_prefix")

# gazelle:default_visibility //oss/modular/docs:__subpackages__

package(default_visibility = ["//oss/modular/docs:__subpackages__"])

# -----------------------------------------------------------------------------
# Targets cheat sheet
#
# CI / artifacts:
#   ./bazelw build --config=ci -- //oss/modular/mojo/docs:mojodocs
#   ./bazelw build --config=ci -- //oss/modular/mojo/docs:releases
# Outputs under bazel-bin/.../mojodocs.tar and releases.tar.
# Other workflows must unpack those tars into modular-fe (e.g. mojosite/docs/, mojosite/releases/).
#
# Local dev (requires modular-fe cloned under .derived/modular-fe/; rsyncs from those tars):
#   ./bazelw run //oss/modular/mojo/docs:install
# Outputs under .derived/modular-fe/mojosite/docs/ and .derived/modular-fe/mojosite/releases/.
# Or generate the docs/ and releases/ separately:
#   ./bazelw run //oss/modular/mojo/docs:install-docs
#   ./bazelw run //oss/modular/mojo/docs:install-releases
# -----------------------------------------------------------------------------

install_docs(
    name = "install-docs",
    dest_subdir = "mojosite/docs",
    tags = ["manual"],
    target = ":mojodocs",
)

install_docs(
    name = "install-releases",
    dest_subdir = "mojosite/releases",
    tags = ["manual"],
    target = ":releases",
)

multirun(
    name = "install",
    buffer_output = True,
    commands = [
        ":install-docs",
        ":install-releases",
    ],
    jobs = 1,
    tags = ["manual"],
)

genrule(
    name = "mojodocs",
    srcs = [
        ":mojosite",
    ],
    outs = ["mojodocs.tar"],
    cmd = """
  # Unpack inputs for processing
  mkdir -p mojosite_docs
  tar -xf $(location :mojosite) -C mojosite_docs

  # Post-process before restructuring (script expects original paths)
  chmod -R +w mojosite_docs
  $(location :post-process-mojodocs) mojosite_docs

  # TODO: Refactor all this after new site launch
  # Restructure for new site layout:
  #   docs_root/ content → root (stripping docs_root/ prefix)
  #   everything else   → docs/
  mv mojosite_docs/docs_root docs_root_tmp
  mkdir docs_tmp
  mv mojosite_docs/* docs_tmp/
  mkdir -p mojosite_docs/docs
  mv docs_tmp/* mojosite_docs/docs/
  rm -rf docs_tmp
  cp -r docs_root_tmp/* mojosite_docs/
  rm -rf docs_root_tmp
  rm -f mojosite_docs/docs/nightly-changelog.md

  # Generate final output
  cd mojosite_docs
  tar -cf ../$@ *
  """,
    tags = ["manual"],
    tools = [":post-process-mojodocs"],
)

# releases.tar = static pages under releases/ (stripped prefix) plus generated nightly.md.
# rules_pkg needs a genrule for the script output, then pkg_files (strip/renames differ
# from the glob), then pkg_tar — this is the minimal composition for mixed sources.
genrule(
    name = "nightly_md",
    outs = ["nightly.md"],
    cmd = "$(location :write-nightly-release) $@",
    tags = ["manual"],
    tools = [":write-nightly-release"],
)

pkg_files(
    name = "releases_nightly_md",
    srcs = [":nightly_md"],
    renames = {
        "//oss/modular/mojo/docs:nightly_md": "nightly.md",
    },
    tags = ["manual"],
)

pkg_files(
    name = "releases_pack",
    srcs = glob(["releases/**"]),
    strip_prefix = strip_prefix.from_pkg("releases"),
    tags = ["manual"],
)

pkg_tar(
    name = "releases",
    srcs = [
        ":releases_nightly_md",
        ":releases_pack",
    ],
    allow_duplicates_with_different_content = False,
    tags = ["manual"],
)

pkg_tar(
    name = "mojosite",
    srcs = [
        ":docs_root-docs",
        ":mojo",
        ":mojo-layout-public-docs",
        ":mojo-std-public-docs",
    ],
    allow_duplicates_with_different_content = False,
    tags = ["manual"],
)

pkg_files(
    name = "docs",
    srcs = glob(
        [
            "**",
        ],
        exclude = [
            "README.md",
            "BUILD.bazel",
            "code/**",
            "docs_root/**",
            "post-process-mojodocs.py",
            "write-nightly-release.py",
            "releases/**",
        ],
    ),
    strip_prefix = strip_prefix.from_pkg(""),
)

pkg_files(
    name = "docs_root-docs",
    srcs = glob(
        ["docs_root/**"],
        allow_empty = True,
    ),
    strip_prefix = strip_prefix.from_pkg(""),
    tags = ["manual"],
)

mojo_commands = [
    "Build",
    "Debug",
    "Demangle",
    "Doc",
    "Format",
    "Index",
    "Precompile",
    "REPL",
    "Run",
]

pkg_files(
    name = "mojo-cli",
    srcs = ["//KGEN/tools/mojo:" + command + ".md_files" for command in mojo_commands],
    prefix = "cli",
    tags = ["manual"],
)

pkg_filegroup(
    name = "mojo",
    srcs = [
        ":docs",
        ":mojo-cli",
    ],
    tags = ["manual"],
)

pkg_filegroup(
    name = "mojo-std-public-docs",
    srcs = [
        "//oss/modular/mojo/stdlib/std:docs",
    ],
    tags = ["manual"],
)

pkg_files(
    name = "layout-docs-files",
    srcs = ["//max/kernels/src/layout:layout.docs"],
    renames = {
        "//max/kernels/src/layout:layout.docs": "layout",
    },
    tags = ["manual"],
)

pkg_filegroup(
    name = "mojo-layout-public-docs",
    srcs = [":layout-docs-files"],
    tags = ["manual"],
)

modular_py_binary(
    name = "post-process-mojodocs",
    srcs = [
        ":post-process-mojodocs.py",
    ],
    tags = ["manual"],
)

modular_py_binary(
    name = "write-nightly-release",
    srcs = [
        ":write-nightly-release.py",
    ],
    data = ["nightly-changelog.md"],
    tags = ["manual"],
)
