load("@rules_multirun//:defs.bzl", "multirun")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//bazel:api.bzl", "install_docs", "modular_py_binary", "pkg_filegroup", "pkg_files", "strip_prefix")

# gazelle:default_visibility //oss/modular/docs:__subpackages__

package(default_visibility = ["//oss/modular/docs:__subpackages__"])

# -----------------------------------------------------------------------------
# Targets cheat sheet
#
# Names mirror paths under modular-fe/mojosite/ after install-docs and
# install-releases (underscores instead of slashes):
#
#   mojosite_docs (_pkg_tar_)  -> docs.tar; full tree installed under modular-fe/mojosite/docs/
#   mojosite_docs_root         -> from docs_root/; modular-fe/mojosite/docs/<file> (tar root)
#   mojosite_docs_docs_*       -> modular-fe/mojosite/docs/docs/...
#   mojosite_docs_archive      -> mojodocs.tar (post-processed docs drop)
#   mojosite_releases_archive  -> releases.tar (releases drop)
#   mojosite_releases_nightly_*, mojosite_releases_pack -> pieces that roll into releases.tar
#     (after install, modular-fe/mojosite/releases/...)
#
# Stable CI labels (aliases): :mojodocs, :releases
#
# CI / artifacts:
#   ./bazelw build --config=ci -- //oss/modular/mojo/docs:mojodocs //oss/modular/mojo/docs:releases
# Outputs under bazel-bin/.../mojodocs.tar, docs.tar (pre-post-process), and releases.tar.
#
# Local dev (requires modular-fe cloned under .derived/modular-fe/; rsyncs from those tars):
#   ./bazelw run //oss/modular/mojo/docs:install
# Or run separately:
#   ./bazelw run //oss/modular/mojo/docs:install-docs
#   ./bazelw run //oss/modular/mojo/docs:install-releases
# -----------------------------------------------------------------------------

install_docs(
    name = "install-docs",
    dest_subdir = "mojosite/docs",
    tags = ["manual"],
    target = ":mojodocs",
)

install_docs(
    name = "install-releases",
    dest_subdir = "mojosite/releases",
    tags = ["manual"],
    target = ":releases",
)

multirun(
    name = "install",
    buffer_output = True,
    commands = [
        ":install-docs",
        ":install-releases",
    ],
    jobs = 1,
    tags = ["manual"],
)

genrule(
    name = "mojosite_docs_archive",
    srcs = [
        ":mojosite_docs",
    ],
    outs = ["mojodocs.tar"],
    cmd = """
  set -eu
  mkdir -p mojosite_unpack
  tar -xf $(location :mojosite_docs) -C mojosite_unpack
  chmod -R +w mojosite_unpack
  $(location :post-process-mojodocs) mojosite_unpack
  ( cd mojosite_unpack && tar -cf ../$@ . )
  """,
    tags = ["manual"],
    tools = [":post-process-mojodocs"],
)

# releases.tar = static pages under releases/ (stripped prefix) plus generated nightly.md.
genrule(
    name = "mojosite_releases_nightly_gen",
    outs = ["nightly.md"],
    cmd = "$(location :write-nightly-release) $@",
    tags = ["manual"],
    tools = [":write-nightly-release"],
)

pkg_files(
    name = "mojosite_releases_nightly_md",
    srcs = [":mojosite_releases_nightly_gen"],
    renames = {
        "//oss/modular/mojo/docs:mojosite_releases_nightly_gen": "nightly.md",
    },
    tags = ["manual"],
)

pkg_files(
    name = "mojosite_releases_pack",
    srcs = glob(["releases/**"]),
    strip_prefix = strip_prefix.from_pkg("releases"),
    tags = ["manual"],
)

pkg_tar(
    name = "mojosite_releases_archive",
    srcs = [
        ":mojosite_releases_nightly_md",
        ":mojosite_releases_pack",
    ],
    out = "releases.tar",
    allow_duplicates_with_different_content = False,
    tags = ["manual"],
)

pkg_tar(
    name = "mojosite_docs",
    # Installed under modular-fe/mojosite/docs/: top-level files + docs/ subtree (→ .../docs/docs/...).
    srcs = [
        ":mojosite_docs_docs",
        ":mojosite_docs_root",
    ],
    out = "docs.tar",
    allow_duplicates_with_different_content = False,
    tags = ["manual"],
)

# Sources in this package (manual, reference, …) before prefixing into the inner docs/ tree.
pkg_files(
    name = "mojosite_docs_docs_package",
    srcs = glob(
        [
            "**",
        ],
        exclude = [
            "README.md",
            "BUILD.bazel",
            "code/**",
            "docs_root/**",
            "nightly-changelog.md",
            "post-process-mojodocs.py",
            "write-nightly-release.py",
            "releases/**",
        ],
    ),
    strip_prefix = strip_prefix.from_pkg(""),
)

pkg_files(
    name = "mojosite_docs_root",
    srcs = glob(
        ["docs_root/**"],
        allow_empty = True,
    ),
    strip_prefix = strip_prefix.from_pkg("docs_root"),
    tags = ["manual"],
)

pkg_files(
    name = "mojosite_docs_docs_pages",
    srcs = [":mojosite_docs_docs_package"],
    prefix = "docs",
    strip_prefix = strip_prefix.from_pkg(""),
    tags = ["manual"],
)

mojo_commands = [
    "Build",
    "Debug",
    "Demangle",
    "Doc",
    "Format",
    "Index",
    "Precompile",
    "REPL",
    "Run",
]

pkg_files(
    name = "mojosite_docs_docs_cli",
    srcs = ["//KGEN/tools/mojo:" + command + ".md_files" for command in mojo_commands],
    prefix = "docs/cli",
    strip_prefix = strip_prefix.files_only(),
    tags = ["manual"],
)

pkg_files(
    name = "mojosite_docs_docs_layout",
    srcs = ["//max/kernels/src/layout:layout.docs"],
    prefix = "docs",
    renames = {
        "//max/kernels/src/layout:layout.docs": "layout",
    },
    tags = ["manual"],
)

pkg_files(
    name = "mojosite_docs_docs_std",
    srcs = ["//oss/modular/mojo/stdlib/std:docs"],
    prefix = "docs",
    renames = {
        "//oss/modular/mojo/stdlib/std:docs": "std",
    },
    tags = ["manual"],
)

pkg_filegroup(
    name = "mojosite_docs_docs",
    srcs = [
        ":mojosite_docs_docs_cli",
        ":mojosite_docs_docs_layout",
        ":mojosite_docs_docs_pages",
        ":mojosite_docs_docs_std",
    ],
    tags = ["manual"],
)

modular_py_binary(
    name = "post-process-mojodocs",
    srcs = [
        ":post-process-mojodocs.py",
    ],
    tags = ["manual"],
)

modular_py_binary(
    name = "write-nightly-release",
    srcs = [
        ":write-nightly-release.py",
    ],
    data = ["nightly-changelog.md"],
    tags = ["manual"],
)

alias(
    name = "mojodocs",
    actual = ":mojosite_docs_archive",
    tags = ["manual"],
)

alias(
    name = "releases",
    actual = ":mojosite_releases_archive",
    tags = ["manual"],
)
