# ===----------------------------------------------------------------------=== #
#
# This file is Modular Inc proprietary.
#
# ===----------------------------------------------------------------------=== #

"""Pre-built wheel library targets for Blackwell benchmark external baselines.

These wheels are SM100-specific builds for DeepGEMM, FlashInfer, and flash-attention
used to benchmark MAX kernels against external implementations on B200 GPUs.
"""

load("@@rules_pycross+//pycross:defs.bzl", "pycross_wheel_library")
load("//bazel:api.bzl", "modular_py_library")

package(default_visibility = ["//visibility:public"])

# Wrapper to expose cutlass module from nvidia-cutlass-dsl.
# The nvidia_cutlass_dsl.pth file adds python_packages/ to sys.path,
# but Bazel doesn't process .pth files. We use imports to achieve the same.
modular_py_library(
    name = "cutlass-imports",
    imports = ["../../../external/rules_pycross++lock_file+modular_pip_lock_file_repo/deps/nvidia-cutlass-dsl@4.3.0/site-packages/nvidia_cutlass_dsl/python_packages"],
    deps = [
        "@modular_pip_lock_file_repo//deps:nvidia-cutlass-dsl",
    ],
)

pycross_wheel_library(
    name = "deep-gemm",
    wheel = "@deepgemm_sm100_wheel//file",
    deps = [
        "@modular_pip_lock_file_repo//deps:torch",
    ],
)

pycross_wheel_library(
    name = "flashinfer",
    wheel = "@flashinfer_sm100_wheel//file",
    deps = [
        "@modular_pip_lock_file_repo//deps:apache-tvm-ffi",
        "@modular_pip_lock_file_repo//deps:click",
        "@modular_pip_lock_file_repo//deps:einops",
        "@modular_pip_lock_file_repo//deps:ninja",  # JIT compilation at runtime
        "@modular_pip_lock_file_repo//deps:numpy",
        "@modular_pip_lock_file_repo//deps:nvidia-cudnn-frontend",
        "@modular_pip_lock_file_repo//deps:nvidia-cutlass-dsl",
        "@modular_pip_lock_file_repo//deps:nvitop",  # provides pynvml via nvidia-ml-py
        "@modular_pip_lock_file_repo//deps:packaging",
        "@modular_pip_lock_file_repo//deps:requests",
        "@modular_pip_lock_file_repo//deps:tabulate",
        "@modular_pip_lock_file_repo//deps:torch",
        "@modular_pip_lock_file_repo//deps:tqdm",
    ],
)

pycross_wheel_library(
    name = "flash-attn",
    wheel = "@flash_attn_sm100_wheel//file",
    deps = [
        ":cutlass-imports",  # adds nvidia_cutlass_dsl/python_packages to sys.path
        "@modular_pip_lock_file_repo//deps:einops",
        "@modular_pip_lock_file_repo//deps:nvidia-cutlass-dsl",
        "@modular_pip_lock_file_repo//deps:torch",
    ],
)
